# simple_spa

./: .clang-format  .env.example  .gitattributes  .gitignore  README.md  runner.bat
Team14/Code14/src/spa/: CMakeLists.txt
Team14/Code14/src/spa/src/Commons/: AppConstants.h  Constant.cpp  Constant.h  EntityFactory.cpp  EntityFactory.h  HashableKey.h  Procedure.cpp  Procedure.h  Statement.cpp  Statement.h  StatementFactory.cpp  StatementFactory.h  StatementTypeFactory.cpp  StatementTypeFactory.h  Variable.cpp  Variable.h
Team14/Code14/src/spa/src/Commons/CFG/: CFGNode.cpp  CFGNode.h  DummyCFGNode.cpp  DummyCFGNode.h
Team14/Code14/src/spa/src/Commons/Entities/: AssignStatement.cpp  AssignStatement.h  CallStatement.cpp  CallStatement.h  Constant.cpp  Constant.h  Entity.cpp  Entity.h  EntityType.h  IfStatement.cpp  IfStatement.h  PrintStatement.cpp  PrintStatement.h  Procedure.cpp  Procedure.h  ReadStatement.cpp  ReadStatement.h  Statement.cpp  Statement.h  StatementType.h  Variable.cpp  Variable.h  WhileStatement.cpp  WhileStatement.h  WildCard.cpp  WildCard.h
Team14/Code14/src/spa/src/PKB/: PKBConcreteReader.cpp  Pkb.cpp  Pkb.h  PkbConcreteReader.h  PkbConcreteWriter.cpp  PkbConcreteWriter.h  PkbReader.cpp  PkbReader.h  PkbTypes.h  PkbWriter.cpp  PkbWriter.h
Team14/Code14/src/spa/src/PKB/AssignmentPatternStore/: Assignment.cpp  Assignment.h  AssignmentManager.cpp  AssignmentManager.h  AssignmentPatternStore.cpp  AssignmentPatternStore.h
Team14/Code14/src/spa/src/PKB/CFGStore/: CFGStore.cpp  CFGStore.h
Team14/Code14/src/spa/src/PKB/Commons/: Assignment.cpp  Assignment.h  ClauseGroup.h  DoubleMapStore.h  DoubleMapStore.hpp  MapStore.h  MapStore.hpp  SetStore.h  SetStore.hpp
Team14/Code14/src/spa/src/PKB/EntityStorage/: AssignmentStatementStore.cpp  AssignmentStatementStore.h  ConstantStore.cpp  ConstantStore.h  EntityStorage.cpp  EntityStorage.h  PrintStatementStore.cpp  PrintStatementStore.h  ProcedureStore.cpp  ProcedureStore.h  ReadStatementStore.cpp  ReadStatementStore.h  StatementStore.cpp  StatementStore.h  VariableStore.cpp  VariableStore.h
Team14/Code14/src/spa/src/PKB/EntityStores/: ConstantStore.cpp  ConstantStore.h  EntityStore.cpp  EntityStore.h  EntityStore.hpp  ProcedureStore.cpp  ProcedureStore.h  StatementStore.cpp  StatementStore.h  VariableStore.cpp  VariableStore.h
Team14/Code14/src/spa/src/PKB/Managers/: AffectsRelationshipManager.cpp  AffectsRelationshipManager.h  AssignPatternManager.cpp  AssignPatternManager.h  AssignmentManager.cpp  AssignmentManager.h  CFGManager.cpp  CFGManager.h  CallsRelationshipManager.cpp  CallsRelationshipManager.h  ConditionPatternManager.h  ConditionPatternManager.hpp  EntitiesManager.cpp  EntitiesManager.h  FollowsRelationshipManager.cpp  FollowsRelationshipManager.h  IfPatternManager.cpp  IfPatternManager.h  ManagerUtils.cpp  ManagerUtils.h  ManagerUtilsImpl.cpp  ModifiesProcRelationshipManager.cpp  ModifiesProcRelationshipManager.h  ModifiesRelationshipManager.cpp  ModifiesRelationshipManager.h  NextRelationshipManager.cpp  NextRelationshipManager.h  ParentRelationshipManager.cpp  ParentRelationshipManager.h  PkbReaderManager.cpp  PkbReaderManager.h  PkbWriterManager.cpp  PkbWriterManager.h  ProcToProcRelationshipManager.h  ProcToProcRelationshipManager.hpp  ProcToVarRelationshipManager.h  ProcToVarRelationshipManager.hpp  StmtToStmtRelationshipManager.h  StmtToStmtRelationshipManager.hpp  StmtToVarRelationshipManager.h  (+7 more)
Team14/Code14/src/spa/src/PKB/PatternStore/: AssignPatternStore.cpp  AssignPatternStore.h  AssignmentPatternStore.cpp  AssignmentPatternStore.h  ConditionPatternStore.cpp  ConditionPatternStore.h  IfPatternStore.cpp  IfPatternStore.h  WhilePatternStore.cpp  WhilePatternStore.h
Team14/Code14/src/spa/src/PKB/RelationshipStorage/: FollowsRelationshipStore.cpp  FollowsRelationshipStore.h  RelationshipStorage.cpp  RelationshipStorage.h  UsesRelationshipStore.cpp  UsesRelationshipStore.h
Team14/Code14/src/spa/src/PKB/RelationshipStores/: AffectsRelationshipStore.cpp  AffectsRelationshipStore.h  CallsRelationshipStore.cpp  CallsRelationshipStore.h  FollowsRelationshipStore.cpp  FollowsRelationshipStore.h  RelationshipStore.cpp  (+14 more)
Team14/Code14/src/spa/src/QPS/: AssignPatternStrategy.cpp  AssignPatternStrategy.h  Clause.cpp  Clause.h  ClauseHandler.cpp  ClauseHandler.h  Entity.cpp  Entity.h  ExprSpecParser.cpp  ExprSpecParser.h  FollowsStarSuchThatStrategy.cpp  FollowsStarSuchThatStrategy.h  FollowsSuchThatStrategy.cpp  FollowsSuchThatStrategy.h  ModifiesSuchThatStrategy.cpp  ModifiesSuchThatStrategy.h  PQLEvaluator.cpp  PQLEvaluator.h  PQLParser.cpp  PQLParser.h  ParentStarSuchThatStrategy.cpp  ParentStarSuchThatStrategy.h  ParentSuchThatStrategy.cpp  ParentSuchThatStrategy.h  PatternClause.cpp  PatternClause.h  QPS.cpp  QPS.h  QPSTypes.h  QPSUtil.cpp  QPSUtil.h  Qps.cpp  Qps.h  Query.cpp  Query.h  QueryEntity.cpp  QueryEntity.h  QueryEvaluator.cpp  QueryEvaluator.h  Ref.cpp  (+14 more)
Team14/Code14/src/spa/src/SP/: ConditionalValidator.cpp  ConditionalValidator.h  SP.cpp  SP.h  SPParser.cpp  SPParser.h  SPToken.cpp  SPToken.h  SPTokenType.h  SPTokenizer.cpp  SPTokenizer.h  SyntacticValidator.cpp  SyntacticValidator.h
Team14/Code14/src/unit_testing/: CMakeLists.txt
Team14/Code14/src/unit_testing/src/: TestAST.cpp  TestPQLParser.cpp  TestQuery.cpp  TestQueryEvaluator.cpp  TestSPTokenizer.cpp  TestSyntacticValidator.cpp  TestToken.cpp  TestTokenizer.cpp  main.cpp
Team14/Code14/src/unit_testing/src/Commons/: TestEntities.cpp
Team14/Code14/src/unit_testing/src/IntegrationTesting/: TestPkbQps.cpp
Team14/Code14/src/unit_testing/src/PKB/: TestPkb.cpp  TestPkbReader.cpp  TestPkbWriter.cpp
Team14/Code14/src/unit_testing/src/QPS/: QPSDebug.cpp  QPSTestUtil.cpp  QPSTestUtil.h  StubPkbReader.cpp  StubPkbReader.h  TestErrors.cpp  TestExprSpecParser.cpp  TestPQLEvaluator.cpp  TestPQLParser.cpp  TestQPSOptimizer.cpp  TestQPSUtil.cpp  TestQuery.cpp  TestResultHandler.cpp  TestSuchThatStrategies.cpp  TestToken.cpp  TestTokenizer.cpp
Team14/Code14/src/unit_testing/src/SP/: TestSPParser.cpp  TestSPParserAdvanced.cpp
(+452 files in other folders)
